# MEGGD-Decompile

./: CMakeLists.txt  Dockerfile  bytecode_format.cpp  bytecode_types.hpp  disassembler.cpp  smoke_test_main.cpp
include/: bytecode_format.hpp  bytecode_reader.hpp  code_printer.hpp  decompiler.hpp  disassembler.hpp  escape_decode.hpp  expr_tracker.hpp  ir.hpp  structurizer.hpp
src/: bytecode_format.cpp  bytecode_reader.cpp  code_printer.cpp  decompiler.cpp  disassembler.cpp  escape_decode.cpp  expr_tracker.cpp  main.cpp  server.cpp  structurizer.cpp
